--- a/src/Projects.css
+++ b/src/Projects.css
@@ -1,5 +1,8 @@
 #projects {
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .projects-container {
   color: white;
